--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
     "ember-cli": "0.1.5",
+    "ember-cli-bootswatch": "^0.1.4",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.7",
     "ember-cli-esnext": "0.1.1",
