--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
     "bootstrap": "^3.3.1",
-    "bootswatch": "^3.3.1"
+    "bootswatch": "^3.3.1",
+    "selectize": "~0.11.2"
   }
 }
